- also export mpinv

0.19 2021-05-24
- change to PDL 2.047 with native complex i()

0.18 2021-05-03
- stop loading PDL::Complex and overriding PDL:: functions

0.17 2021-04-01
- handle native complex data

0.16 2021-03-23
- fix pp_setversion calls now that preserves string

0.15 2021-03-04
- add [c]gtsv functions

0.14 2019-12-09
- updated build-file perms - thanks @manwar
- support Lapack >= 3.7.0 - thanks Grégory Vanuxem

0.13 2019-11-10
- updated metadata to point to GitHub

0.12  Mon Jun  8 10:42:52 EDT 2015

  * Fix last 'package PDL::Complex'
  * Add 'clean' option to remove *~ files

0.11

  * Hide PDL and PDL::Complex package declarations from
    PAUSE/CPAN indexer

0.10

  * Add -lquadmath to compiler flags for gfortran

0.09

  * Use new GENERATE feature to make POD from PP files
  * Use correct meta-spec for META_MERGE
  * Require constant 1.03 - older version do not work with hashes.

0.08_03

  * Test of KMX patch to Makefile.PL for better docs on metacpan.org and search.cpan.org
  * Improved library detection for SPP PDL edition

0.08_02

  * Test of KMX patch to Makefile.PL

0.08_01

  * Add AUTHOR and ABSTRACT info to Makefile.PL
  * Apply patch from CPAN RT bug #38167
  * Fix encoding specs for POD

0.08  Tue Dec  3 06:07:55 EST 2013

  * use VERSION_FROM in Makefile.PLs
  * update license to Artistic 2.0
  * bump VERSION to 0.08 for official release

0.07_01  Sat Nov 30 18:17:48 EST 2013

  * fixed bug in msyminv()
  * global conversion from DOS to UNIX line endings
  * explicitly specifying a Latin-1 encoding in the PODs
  * removed debianization. This package is already in debian
  * partial clean up of $VERSION specification

0.07  Wed Nov 27 17:09:40 EST 2013

  * Official release with 1st PDL-2.007 support

0.06_02  Wed Nov 27 14:19:17 EST 2013

  * fix CPAN dependency info so PDL is used for config

0.06_01  Sun Nov 17 11:21:52 2013

  * update build to work with new PDL_Indx data type

0.06  Thu Oct 09 00:00:00 2007
